# simpletextviewer

./: CMakeLists.txt  README.md  findfiledialog.cpp  mainwindow.cpp  mainwindow.h  openurldialog.cpp  openurldialog.h  simpletextviewer.pro  textedit.cpp  textedit.h
